Fix scrollbar appearing where it shouldn't

--- a/src/routes/Marketplace/Marketplace.module.css
+++ b/src/routes/Marketplace/Marketplace.module.css
@@ -121,6 +121,7 @@
 
     max-width: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
 
     padding: 12px;
 
